[tool.poetry]
name = "asgi"
version = "0.1.0"
description = ""
authors = ["Serg Kuchukov Office <kuchukov.sergey@gmail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
channels = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
